2001-08-21  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_dummy_fill): fill the stream with error pseudofuns
	(close_dummys): a macro now, uses stream_dummy_fill()
	(make_broadcast_stream, make_concatenated_stream,
	MAKE-STRING-INPUT-STREAM, make_string_output_stream,
	MAKE-STRING-PUSH-STREAM, make_pphelp_stream,
	MAKE-BUFFERED-INPUT-STREAM, MAKE-BUFFERED-OUTPUT-STREAM,
	fill_pseudofuns_unbuffered, fill_pseudofuns_buffered,
	make_keyboard_stream, make_terminal_stream_,
	MAKE-WINDOW, make_printer_stream): use stream_dummy_fill()
	(ELTYPE_DISPATCH): new macro
	(canon_eltype, fill_pseudofuns_buffered): use it

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* lispbibl.d (direction_t): Explicit value assignments.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* io.d (get_readtable): Local variable zuweisung -> assignment.
	(read_char_syntax): Likewise.
	(wpeek_char_syntax): Likewise.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* eval.d (eval_fsubr): Change error message: talk about special
	operator, not special form.

2001-08-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS): with win32gcc, do not need
	-D_NO_OLDNAMES: there is no sleep() in stdlib.h and
	_NO_OLDNAMES_ kills struct timeb in timeb.h

2001-08-21  Sam Steingold  <sds@gnu.org>

	fixed bug #446942
	* makemake.in (DISTFILE): isulate from AIX uname which does not
	have the -p option

2001-08-21  Sam Steingold  <sds@gnu.org>

	some symbols appeared in wrong packages - fix this
	* international.lisp (textdomain, textdomaindir): use package
	prefix before SET-TEXTDOMAIN and SET-TEXTDOMAINDIR
	* clos.lisp (signature): import from COMPILER

2001-08-20  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (mlf-unquote, mlf-init-function): new functions
	(make-init-form): warn about errors in MLF-INIT-FUNCTION

2001-08-20  Sam Steingold  <sds@gnu.org>

	* places.lisp (setf-symbol): intern the result when the argument
	is interned

2001-08-05  Bruno Haible  <haible@clisp.cons.org>
